service: never die on tool failures and use API-safe reads
An uncaught exception on the binder thread kills the whole isolated
process, which the client then reports as DeadObjectException. Wrap
tool execution in a try/catch(Throwable) returning the error text, and
replace API 33+ calls (Files.readString, String.isBlank) with minSdk 29
safe equivalents. On the client, replay the pending tool call once
after rebinding instead of just showing the error.